added cache logic

--- a/src/main/resources/bundles/messages.properties
+++ b/src/main/resources/bundles/messages.properties
@@ -1,3 +1,4 @@
 1000=No Data Found
-1001=Claim Data Not Found for Claim Id {0}
+#1001=Claim Data Not Found for Claim Id {0}
+1001=Data Not Found for Claim Id {0}
 1002=Error while calling MyOtherService
